[gd_scene load_steps=8 format=3 uid="uid://c4slapvfyyl0w"]

[ext_resource type="PackedScene" uid="uid://bvkktqfd43gsp" path="res://views/base/view_base.tscn" id="1_kgf0j"]
[ext_resource type="Script" uid="uid://cj63o6a2br0n2" path="res://scripts/views/stage_clear.gd" id="2_0rew0"]
[ext_resource type="StyleBox" uid="uid://daouumpvnupq" path="res://themes/popup_bg.tres" id="3_5pb7t"]
[ext_resource type="Theme" uid="uid://b633f7byrj50x" path="res://themes/button.tres" id="4_a3jkw"]
[ext_resource type="StyleBox" uid="uid://dat8kgscwybo3" path="res://themes/colors/green_hover.tres" id="5_20m2s"]
[ext_resource type="StyleBox" uid="uid://d2h7by25n3too" path="res://themes/colors/green_pressed.tres" id="6_4y10x"]
[ext_resource type="StyleBox" uid="uid://dhjcvxgv25mpi" path="res://themes/colors/green_normal.tres" id="7_vgqeg"]

[node name="ViewBase" instance=ExtResource("1_kgf0j")]
script = ExtResource("2_0rew0")

[node name="Control" type="Control" parent="UILayer" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UILayer" index="1"]
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -152.5
offset_right = 277.5
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_5pb7t")

[node name="ButtonContainer" type="VBoxContainer" parent="UILayer/Panel" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -75.0
offset_right = 218.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 10
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="UILayer/Panel/ButtonContainer" index="0"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme = ExtResource("4_a3jkw")
theme_override_styles/hover = ExtResource("5_20m2s")
theme_override_styles/pressed = ExtResource("6_4y10x")
theme_override_styles/normal = ExtResource("7_vgqeg")
text = "再学习一次"
icon_alignment = 1

[node name="Button2" type="Button" parent="UILayer/Panel/ButtonContainer" index="1"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme = ExtResource("4_a3jkw")
text = "去考试"
icon_alignment = 1

[connection signal="pressed" from="UILayer/Panel/ButtonContainer/Button" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="UILayer/Panel/ButtonContainer/Button2" to="." method="_on_button_back_pressed"]
